--- a/stil.css
+++ b/stil.css
@@ -33,6 +33,10 @@ main h2 {
     background: color black
 }
 
+p {
+    font-size: 30px;
+}
+
 header nav ul {
     list-style: none;
     margin: 0;
