--- a/stil.css
+++ b/stil.css
@@ -133,6 +133,10 @@ footer {
     position: absolute;
 }
 
+.grid {
+    display: grid;
+}
+
 /* Custom classes */
 
 .downsmariusbilde {
@@ -167,4 +171,22 @@ footer {
     margin-top: 2rem;
     width: 800px;
     height: auto;
+}
+
+.photogrid img {
+    width: 300px;
+    height: 300px;
+    border-radius: 1em;
+    outline: 5px solid #FFD700;
+    transition: outline 0.3s, box-shadow 0.3s;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .photogrid img:hover {
+        outline: 5px solid #FF4500;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
+}
+
+.photoalbumgorge {
+    gap: 1rem;
 }
