--- a/stil.css
+++ b/stil.css
@@ -70,7 +70,7 @@ body {
 }
 
 body {
-    background-image: url('/images/Flag_of_Lithuania.svg.png');
+    background-image: url('./images/Flag_of_Lithuania.svg.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
